<resources>
    <string name="app_name">Cars10ZES</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hello_blank_fragment">not yet implemented</string>

    <string name="title_home">Zeiterfassung</string>
    <string name="button_home_start">Start</string>
    <string name="button_home_end">End</string>
    <string name="text_home_session">session:</string>
    <string name="text_home_pause">pause:</string>
    <string name="hint_home_user">Name</string>
    <string name="hint_home_project">Project</string>
    <string name="text_home_time_default">time</string>
    <string name="toast_home_missing_data">Please insert Name and Project</string>

    <string name="title_group_data">Data</string>
    <string name="title_history">History</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_overview">Overview</string>
    <string name="title_startendtimes">Start End-Times</string>
    <string name="title_group_entry">Entry</string>
    <string name="title_newentry">New</string>
    <string name="title_deleteentry">Delete</string>
    <string name="title_group_info">Information</string>
    <string name="title_version">Version</string>
    <string name="title_sourcecode" translatable="false">Source Code</string>
    <string name="source_code_link" translatable="false">https://github.com/MMaue/Cars10ZES</string>
    <string name="max">max:</string>
    <string name="min">min:</string>
    <string name="average">average:</string>
    <string name="mo">Mo.</string>
    <string name="di">Di.</string>
    <string name="mi">Mi.</string>
    <string name="don">Do.</string>
    <string name="fr">Fr.</string>
    <string name="sa">Sa.</string>
    <string name="so">So.</string>

</resources>