<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".CalendarFragment">

    <Spinner
        android:id="@+id/spinner_cal_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_calendar_prev_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:contentDescription="previous month"
        android:src="@drawable/baseline_arrow_left_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_cal_project" />

    <ImageButton
        android:id="@+id/button_calendar_next_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_right_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_calendar_prev_month"
        android:contentDescription="next month" />

    <TextView
        android:id="@+id/text_calendar_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Februar 2023"
        android:textSize="22sp"
        android:textColor="@color/blue_1"
        app:layout_constraintBottom_toBottomOf="@+id/button_calendar_prev_month"
        app:layout_constraintEnd_toStartOf="@+id/button_calendar_next_month"
        app:layout_constraintStart_toEndOf="@+id/button_calendar_prev_month"
        app:layout_constraintTop_toTopOf="@+id/button_calendar_prev_month" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/blue_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_calendar_prev_month" />

    <TextView
        android:id="@+id/text_day_mo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/mo"
        android:textAlignment="center"
        android:textColor="@color/text_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5"
        app:layout_constraintWidth_percent="0.142" />

    <TextView
        android:id="@+id/text_day_di"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/di"
        android:textAlignment="center"
        android:textColor="@color/text_1"
        app:layout_constraintStart_toEndOf="@+id/text_day_mo"
        app:layout_constraintTop_toTopOf="@+id/text_day_mo"
        app:layout_constraintWidth_percent="0.142"/>

    <TextView
        android:id="@+id/text_day_mi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mi"
        android:textAlignment="center"
        android:textColor="@color/text_1"
        app:layout_constraintStart_toEndOf="@+id/text_day_di"
        app:layout_constraintTop_toTopOf="@+id/text_day_mo"
        app:layout_constraintWidth_percent="0.142"/>

    <TextView
        android:id="@+id/text_day_do"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/don"
        android:textAlignment="center"
        android:textColor="@color/text_1"
        app:layout_constraintStart_toEndOf="@+id/text_day_mi"
        app:layout_constraintTop_toTopOf="@+id/text_day_mo"
        app:layout_constraintWidth_percent="0.142"/>

    <TextView
        android:id="@+id/text_day_fr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fr"
        android:textAlignment="center"
        android:textColor="@color/text_1"
        app:layout_constraintStart_toEndOf="@+id/text_day_do"
        app:layout_constraintTop_toTopOf="@+id/text_day_mo"
        app:layout_constraintWidth_percent="0.142"/>

    <TextView
        android:id="@+id/text_day_sa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sa"
        android:textAlignment="center"
        android:textColor="@color/text_1"
        app:layout_constraintStart_toEndOf="@+id/text_day_fr"
        app:layout_constraintTop_toTopOf="@+id/text_day_mo"
        app:layout_constraintWidth_percent="0.142"/>

    <TextView
        android:id="@+id/text_day_so"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/so"
        android:textAlignment="center"
        android:textColor="@color/text_1"
        app:layout_constraintStart_toEndOf="@+id/text_day_sa"
        app:layout_constraintTop_toTopOf="@+id/text_day_mo"
        app:layout_constraintWidth_percent="0.142" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewCalendar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_day_mo" />

</androidx.constraintlayout.widget.ConstraintLayout>